protocols/tests/adders/adder_d1/both_threads_fail.out
error: The two expressions did not evaluate to the same value (in transaction `add_fork_early(1, 2, 5)`)
   ┌─ adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 5, RHS Value: 3

error: The two expressions did not evaluate to the same value (in transaction `add_fork_early(4, 5, 10)`)
   ┌─ adders/adder_d1/add_d1.prot:26:13
   │
26 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 10, RHS Value: 9

Trace 0 execution failed.
